Сontinue to make a mobile version

--- a/offer.html
+++ b/offer.html
@@ -334,7 +334,7 @@
                 <div class="info__tittle tittle tittle__page">
                     <h2 class="tittle__2 tittle__2-page">Bônus Betano
                     </h2>
-                    <img class="crosses crosses__absolute crosses__page" src="img/crosses.png">
+                    <img class="crosses crosses__none crosses__absolute crosses__page" src="img/crosses.png">
                 </div>
                 <div class="info__text text info__text-page">
                     <div class="benefit text__benefit">
@@ -648,7 +648,7 @@
                     <div class="tittle__container">
                         <h4 class="tittle__3 best__tittle-3 tittle__3-page">Dê o seu palpite e concorra até R$50 mil!
                         </h4>
-                        <img class="crosses crosses__absolute crosses__page crosses__page-card" src="img/crosses.png">
+                        <img class="crosses crosses__none crosses__absolute crosses__page crosses__page-card" src="img/crosses.png">
 
                     </div>
 
@@ -691,7 +691,7 @@
                 <div class="info__tittle tittle tittle__page">
                     <h2 class="tittle__2 tittle__2-page">A Betano é Confiável?
                     </h2>
-                    <svg class="crosses crosses__absolute crosses__page lines__side-tittle" width="40vw" height="146"
+                    <svg class="crosses crosses__none crosses__absolute crosses__page lines__side-tittle" width="40vw" height="146"
                         viewBox="0 0 733 146" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path
                             d="M622.281 72.4151L725.733 145.328C726.347 145.762 727.08 145.995 727.832 145.995C728.584 145.995 729.317 145.762 729.931 145.328L833.432 72.4833C834.222 71.9269 834.759 71.0795 834.925 70.1274C835.09 69.1754 834.87 68.1967 834.313 67.4067C833.757 66.6166 832.909 66.08 831.956 65.9148C831.003 65.7496 830.024 65.9693 829.234 66.5257L727.837 137.9L626.479 66.4575C625.688 65.9012 624.709 65.6814 623.757 65.8466C622.804 66.0119 621.956 66.5485 621.399 67.3385C620.843 68.1286 620.623 69.1072 620.788 70.0593C620.953 71.0113 621.49 71.8588 622.281 72.4151Z"
@@ -822,7 +822,7 @@
                         a Betano?
                     </h2>
 
-                    <svg class="crosses crosses__absolute crosses__page lines__side-tittle" width="40vw" height="348"
+                    <svg class="crosses crosses__none crosses__absolute crosses__page lines__side-tittle" width="40vw" height="348"
                         viewBox="0 0 348 348" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path
                             d="M223.732 346.612C302.638 335.564 357.648 262.643 346.601 183.737C335.553 104.831 262.632 49.8207 183.726 60.868C104.82 71.9154 49.8097 144.837 60.8571 223.743C71.9045 302.649 144.826 357.659 223.732 346.612Z"
@@ -983,7 +983,7 @@
                 <div class="info__tittle tittle tittle__page">
                     <h2 class="tittle__2 tittle__2-page">Apostas Esportivas
                     </h2>
-                    <img class="crosses crosses__absolute crosses__page" src="img/crosses.png">
+                    <img class="crosses crosses__none crosses__absolute crosses__page" src="img/crosses.png">
                 </div>
                 <div class="info__text text info__text-page">
                     <div class="benefit text__benefit">
@@ -1051,7 +1051,7 @@
                 <div class="info__tittle tittle tittle__page">
                     <h2 class="tittle__2 tittle__2-page">Principais Competições Esportivas
                     </h2>
-                    <svg class="crosses crosses__absolute lines__side-tittle" width="40vw" height="348"
+                    <svg class="crosses crosses__none crosses__absolute lines__side-tittle" width="40vw" height="348"
                         viewBox="0 0 348 348" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path
                             d="M223.732 346.612C302.638 335.564 357.648 262.643 346.601 183.737C335.553 104.831 262.632 49.8207 183.726 60.868C104.82 71.9154 49.8097 144.837 60.8571 223.743C71.9045 302.649 144.826 357.659 223.732 346.612Z"
@@ -1307,7 +1307,7 @@
                 <div class="info__tittle tittle tittle__page">
                     <h2 class="tittle__2 tittle__2-page tittle__2-blue">Bet Mentor
                     </h2>
-                    <svg class="crosses crosses__absolute lines__side-tittle" width="40vw" height="348"
+                    <svg class="crosses crosses__none crosses__absolute lines__side-tittle" width="40vw" height="348"
                         viewBox="0 0 348 348" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path
                             d="M223.732 346.612C302.638 335.564 357.648 262.643 346.601 183.737C335.553 104.831 262.632 49.8207 183.726 60.868C104.82 71.9154 49.8097 144.837 60.8571 223.743C71.9045 302.649 144.826 357.659 223.732 346.612Z"
@@ -1515,7 +1515,7 @@
                             <li class="blue"><span class="black">AstroPay</span></li>
                         </ul>
                     </div>
-                    <img class="crosses crosses__absolute crosses__page crosses__page-bottom" src="img/crosses.png">
+                    <img class="crosses crosses__none crosses__absolute crosses__page crosses__page-bottom" src="img/crosses.png">
                 </div>
             </section>
             <p class="page__text">Sendo que para saque apenas transferência e Neteller estão disponíveis.
@@ -1551,7 +1551,7 @@
                 <div class="info__tittle tittle tittle__page">
                     <h2 class="tittle__2 tittle__2-page">Suporte ao Cliente
                     </h2>
-                    <svg class="crosses crosses__absolute crosses__page lines__side-tittle" width="40vw" height="348"
+                    <svg class="crosses crosses__none crosses__absolute crosses__page lines__side-tittle" width="40vw" height="348"
                         viewBox="0 0 348 348" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path
                             d="M223.732 346.612C302.638 335.564 357.648 262.643 346.601 183.737C335.553 104.831 262.632 49.8207 183.726 60.868C104.82 71.9154 49.8097 144.837 60.8571 223.743C71.9045 302.649 144.826 357.659 223.732 346.612Z"
