Almost finished the mobile version

--- a/guias.html
+++ b/guias.html
@@ -120,7 +120,7 @@
                     </div>
 
                 </div>
-                <div class="bonus bonuses__bonus">
+                <div class="bonus bonuses__bonus bonus__none">
                     <p class="bonus__date">7 MAIO 2022</p>
                     <img class="bonus__image" src="img/bonus.jpg">
                     <p class="bonus__text">Bônus Sem Depósito | 7 Sites Com Bônus Grátis (2022)</p>
@@ -130,7 +130,7 @@
                     </div>
 
                 </div>
-                <div class="bonus bonuses__bonus">
+                <div class="bonus bonuses__bonus bonus__none">
                     <p class="bonus__date">7 MAIO 2022</p>
                     <img class="bonus__image" src="img/bonus.jpg">
                     <p class="bonus__text">Bônus Sem Depósito | 7 Sites Com Bônus Grátis (2022)</p>
@@ -140,7 +140,7 @@
                     </div>
 
                 </div>
-                <div class="bonus bonuses__bonus">
+                <div class="bonus bonuses__bonus bonus__none">
                     <p class="bonus__date">7 MAIO 2022</p>
                     <img class="bonus__image" src="img/bonus.jpg">
                     <p class="bonus__text">Bônus Sem Depósito | 7 Sites Com Bônus Grátis (2022)</p>
@@ -150,7 +150,7 @@
                     </div>
 
                 </div>
-                <div class="bonus bonuses__bonus">
+                <div class="bonus bonuses__bonus bonus__none">
                     <p class="bonus__date">7 MAIO 2022</p>
                     <img class="bonus__image" src="img/bonus.jpg">
                     <p class="bonus__text">Bônus Sem Depósito | 7 Sites Com Bônus Grátis (2022)</p>
@@ -171,7 +171,7 @@
 
     </main>
     <footer class="footer">
-        <svg style="position:absolute; right: 0%; top: 40%; " width="12vw" height="353" viewBox="0 0 269 353"
+        <svg class="footer__dots"  width="12vw" height="353" viewBox="0 0 269 353"
             fill="none" xmlns="http://www.w3.org/2000/svg">
             <path
                 d="M20.7172 159.738C19.115 161.473 17.0342 162.694 14.7381 163.247C12.4419 163.8 10.0334 163.659 7.8172 162.843C5.60096 162.027 3.67646 160.572 2.28707 158.662C0.897668 156.752 0.10576 154.473 0.0114759 152.113C-0.0828087 149.753 0.524764 147.418 1.75737 145.403C2.98997 143.388 4.79226 141.784 6.93633 140.794C9.08041 139.804 11.47 139.471 13.8029 139.839C16.1358 140.207 18.3074 141.258 20.0429 142.86C22.3683 145.01 23.7454 147.995 23.8719 151.159C23.9983 154.324 22.8637 157.409 20.7172 159.738Z"
@@ -276,7 +276,7 @@
                 está apostando em operadores licenciados em sua jurisdição. Adoramos apostar, mas fazemos isso com
                 responsabilidade e pedimos que você faça o mesmo!</p>
             <p class="footer__age">18+</p>
-            <svg style="margin-top: -3vw;" width="20vw" height="174" viewBox="0 0 159 174" fill="none"
+            <svg class="crosses__none" style="margin-top: -3vw;" width="20vw" height="174" viewBox="0 0 159 174" fill="none"
                 xmlns="http://www.w3.org/2000/svg">
                 <path
                     d="M127.421 32.5293L87.1493 72.1717L46.8779 32.5293L15.2852 63.6154L55.5565 103.258L15.2852 142.9L46.8779 173.999L87.1493 134.357L127.421 173.999L159 142.9L118.729 103.258L159 63.6154L127.421 32.5293Z"
