--- a/offer.html
+++ b/offer.html
@@ -47,7 +47,7 @@
                     </div>
                 </div>
 
-                <button class="button button__open button__open-anchor">abrir betano<img class="arrow"
+                <button class="button button__open button__open-margin button__open-anchor">abrir betano<img class="arrow"
                         src="img/arrow.png"></button>
             </div>
             <ul class="anchor__list">
@@ -91,32 +91,31 @@
                         <button class="button button__open button__open-orange button__open-anchor">abrir betano<img
                                 class="arrow" src="img/arrow.png"></button>
                         <p class="banner__notation">18+ Aposte Com Responsabilidade</p>
-                        <img class="page__crosses-orange" src="img/crossesorange.png">
-                        <img class="page__dots-orange" src="img/dotsorange.png">
+                        <img class="page__crosses-orange crosses__none" src="img/crossesorange.png">
+                        <img class="page__dots-orange crosses__none" src="img/dotsorange.png">
 
 
                     </div>
                 </div>
                 <section class="card main__anchor">
                     <div class="anchor__offer">
+                        <div class="opportunities__line-card opportunities__line-cardorange opportunities__line-anchor">
+                            <p class="prize__text prize__text-white prize__text-line">MELHOR CASA</p>
+                        </div>
                         <img src="img/offerimage.webp" class="offer__image offer__image-anchor">
                         <div class="offer__element offer__element-info offer__element-card">
-                            <div class="stars">
-                                <img class="star offer__stars" src="img/star.png">
-                                <img class="star offer__stars" src="img/star.png">
-                                <img class="star offer__stars" src="img/star.png">
-                                <img class="star offer__stars" src="img/star.png">
-                                <img class="star offer__stars" src="img/star.png">
+                         
+                            <p class="offer__rating offer__rating-anchor">5/5 <img class="info-icon" src="img/info.png"></p>
+                            <div class=" offer__checkbox offer__checkbox-special">
+                                <input class="checkbox" type="checkbox">
+                                <p class="offer__compare">Comparar</p>
                             </div>
-                            <p class="offer__rating">5/5 <img class="info-icon" src="img/info.png"></p>
-                            <input class="checkbox anchor__checkbox" type="checkbox">
-                            <p class="offer__compare">Comparar</p>
                         </div>
                     </div>
                 </section>
             </div>
 
-            <div class="page__lines lines">
+            <div class="page__lines">
                 <div class="lines__container">
                     <p class="lines__tittle">WEBSITE</p>
                     <div class="lines__object"><span style="color: #0057FF;">www.betano.com</span></div>
@@ -484,7 +483,7 @@
                         <h4 class="tittle__3 best__tittle-3 tittle__3-page">Cumpra as missões da Betano e ganhe Apostas
                             Grátis Turbinadas!
                         </h4>
-                        <svg class="dots__page" width="15vw" height="346" viewBox="0 0 308 346" fill="none"
+                        <svg class="dots__page crosses__none" width="15vw" height="346" viewBox="0 0 308 346" fill="none"
                             xmlns="http://www.w3.org/2000/svg">
                             <path
                                 d="M20.2569 156.572C18.6903 158.273 16.6558 159.47 14.4106 160.011C12.1655 160.553 9.81056 160.415 7.64356 159.615C5.47656 158.815 3.59484 157.389 2.23632 155.517C0.877793 153.645 0.103484 151.411 0.0112948 149.098C-0.0808946 146.785 0.513176 144.496 1.71839 142.521C2.9236 140.546 4.68584 138.974 6.78226 138.004C8.87869 137.033 11.2152 136.707 13.4963 137.068C15.7773 137.428 17.9006 138.458 19.5976 140.029C21.8713 142.136 23.2178 145.062 23.3415 148.163C23.4651 151.265 22.3557 154.289 20.2569 156.572Z"
@@ -569,7 +568,7 @@
                         <h4 class="tittle__3 best__tittle-3 tittle__3-page">Aposte gratuitamente, e tudo que vencer é
                             seu!
                         </h4>
-                        <svg class="dots__page" width="10vw" height="346" viewBox="0 0 308 346" fill="none"
+                        <svg class="dots__page crosses__none" width="10vw" height="346" viewBox="0 0 308 346" fill="none"
                             xmlns="http://www.w3.org/2000/svg">
                             <path
                                 d="M20.2569 156.572C18.6903 158.273 16.6558 159.47 14.4106 160.011C12.1655 160.553 9.81056 160.415 7.64356 159.615C5.47656 158.815 3.59484 157.389 2.23632 155.517C0.877793 153.645 0.103484 151.411 0.0112948 149.098C-0.0808946 146.785 0.513176 144.496 1.71839 142.521C2.9236 140.546 4.68584 138.974 6.78226 138.004C8.87869 137.033 11.2152 136.707 13.4963 137.068C15.7773 137.428 17.9006 138.458 19.5976 140.029C21.8713 142.136 23.2178 145.062 23.3415 148.163C23.4651 151.265 22.3557 154.289 20.2569 156.572Z"
@@ -1177,7 +1176,7 @@
                         <h4 class="tittle__3 best__tittle-3 tittle__3-page">Ganhe o dobro até R$300 no primeiro depósito
                             + R$20 em aposta grátis!
                         </h4>
-                        <svg class="dots__page dots__page-down" width="15vw" height="346" viewBox="0 0 308 346"
+                        <svg class="dots__page dots__page-down crosses__none" width="15vw" height="346" viewBox="0 0 308 346"
                             fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path
                                 d="M20.2569 156.572C18.6903 158.273 16.6558 159.47 14.4106 160.011C12.1655 160.553 9.81056 160.415 7.64356 159.615C5.47656 158.815 3.59484 157.389 2.23632 155.517C0.877793 153.645 0.103484 151.411 0.0112948 149.098C-0.0808946 146.785 0.513176 144.496 1.71839 142.521C2.9236 140.546 4.68584 138.974 6.78226 138.004C8.87869 137.033 11.2152 136.707 13.4963 137.068C15.7773 137.428 17.9006 138.458 19.5976 140.029C21.8713 142.136 23.2178 145.062 23.3415 148.163C23.4651 151.265 22.3557 154.289 20.2569 156.572Z"
@@ -1414,7 +1413,7 @@
                 <div class="info__tittle tittle tittle__page">
                     <h2 class="tittle__2 tittle__2-page">Betano App
                     </h2>
-                    <svg class="dots__page" width="20vw" height="346" viewBox="0 0 308 346" fill="none"
+                    <svg class="dots__page crosses__none" width="20vw" height="346" viewBox="0 0 308 346" fill="none"
                         xmlns="http://www.w3.org/2000/svg">
                         <path
                             d="M20.2569 156.572C18.6903 158.273 16.6558 159.47 14.4106 160.011C12.1655 160.553 9.81056 160.415 7.64356 159.615C5.47656 158.815 3.59484 157.389 2.23632 155.517C0.877793 153.645 0.103484 151.411 0.0112948 149.098C-0.0808946 146.785 0.513176 144.496 1.71839 142.521C2.9236 140.546 4.68584 138.974 6.78226 138.004C8.87869 137.033 11.2152 136.707 13.4963 137.068C15.7773 137.428 17.9006 138.458 19.5976 140.029C21.8713 142.136 23.2178 145.062 23.3415 148.163C23.4651 151.265 22.3557 154.289 20.2569 156.572Z"
@@ -1787,7 +1786,7 @@
                     <div class="tittle__container">
                         <h2 class="tittle__2 tittle__2-page">Comentários de usuários
                         </h2>
-                        <svg class="dots__page dots__page-comment" width="20vw" height="346" viewBox="0 0 308 346"
+                        <svg class="dots__page dots__page-comment crosses__none" width="20vw" height="346" viewBox="0 0 308 346"
                             fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path
                                 d="M20.2569 156.572C18.6903 158.273 16.6558 159.47 14.4106 160.011C12.1655 160.553 9.81056 160.415 7.64356 159.615C5.47656 158.815 3.59484 157.389 2.23632 155.517C0.877793 153.645 0.103484 151.411 0.0112948 149.098C-0.0808946 146.785 0.513176 144.496 1.71839 142.521C2.9236 140.546 4.68584 138.974 6.78226 138.004C8.87869 137.033 11.2152 136.707 13.4963 137.068C15.7773 137.428 17.9006 138.458 19.5976 140.029C21.8713 142.136 23.2178 145.062 23.3415 148.163C23.4651 151.265 22.3557 154.289 20.2569 156.572Z"
@@ -1864,7 +1863,11 @@
                         <h2 class="tittle__2 tittle__2-page">Você pode gostar
                         </h2>
                     </div>
-                    <div class="bonuses__element element element-page bonuses__element-arrows">
+                    <div class="bonuses__element element bonuses__element-arrows bonuses__element-block">
+                        <img class=" element__arrow" src="img/leftarrowyellow.png">
+                        <img class=" element__arrow" src="img/rightarrowyellow.png">
+                    </div>
+                    <div class="bonuses__element element element-page bonuses__element-arrows bonuses__element-none">
                         <img class=" element__arrow" src="img/leftarrowblue.png">
                         <img class=" element__arrow" src="img/rightarrowblue.png">
                     </div>
@@ -1882,7 +1885,7 @@
                         </div>
 
                     </div>
-                    <div class="bonus bonuses__bonus bonuses__bonus-width">
+                    <div class="bonus bonuses__bonus bonuses__bonus-width bonus__none">
                         <p class="bonus__date">7 MAIO 2022</p>
                         <img class="bonus__image" src="img/bonus.jpg">
                         <p class="bonus__text">Bônus Sem Depósito | 7 Sites Com Bônus Grátis (2022)</p>
@@ -1892,7 +1895,7 @@
                         </div>
 
                     </div>
-                    <div class="bonus bonuses__bonus bonuses__bonus-width">
+                    <div class="bonus bonuses__bonus bonuses__bonus-width bonus__none">
                         <p class="bonus__date">7 MAIO 2022</p>
                         <img class="bonus__image" src="img/bonus.jpg">
                         <p class="bonus__text">Bônus Sem Depósito | 7 Sites Com Bônus Grátis (2022)</p>
@@ -1902,7 +1905,7 @@
                         </div>
 
                     </div>
-                    <div class="bonus bonuses__bonus bonuses__bonus-width">
+                    <div class="bonus bonuses__bonus bonuses__bonus-width bonus__none">
                         <p class="bonus__date">7 MAIO 2022</p>
                         <img class="bonus__image" src="img/bonus.jpg">
                         <p class="bonus__text">Bônus Sem Depósito | 7 Sites Com Bônus Grátis (2022)</p>
@@ -1923,7 +1926,7 @@
 
     </main>
     <footer class="footer">
-        <svg style="position:absolute; right: 0%; top: 40%; " width="12vw" height="353" viewBox="0 0 269 353"
+        <svg class="footer__dots"  width="12vw" height="353" viewBox="0 0 269 353"
             fill="none" xmlns="http://www.w3.org/2000/svg">
             <path
                 d="M20.7172 159.738C19.115 161.473 17.0342 162.694 14.7381 163.247C12.4419 163.8 10.0334 163.659 7.8172 162.843C5.60096 162.027 3.67646 160.572 2.28707 158.662C0.897668 156.752 0.10576 154.473 0.0114759 152.113C-0.0828087 149.753 0.524764 147.418 1.75737 145.403C2.98997 143.388 4.79226 141.784 6.93633 140.794C9.08041 139.804 11.47 139.471 13.8029 139.839C16.1358 140.207 18.3074 141.258 20.0429 142.86C22.3683 145.01 23.7454 147.995 23.8719 151.159C23.9983 154.324 22.8637 157.409 20.7172 159.738Z"
@@ -2028,7 +2031,7 @@
                 está apostando em operadores licenciados em sua jurisdição. Adoramos apostar, mas fazemos isso com
                 responsabilidade e pedimos que você faça o mesmo!</p>
             <p class="footer__age">18+</p>
-            <svg style="margin-top: -3vw;" width="20vw" height="174" viewBox="0 0 159 174" fill="none"
+            <svg class="crosses__none" style="margin-top: -3vw;" width="20vw" height="174" viewBox="0 0 159 174" fill="none"
                 xmlns="http://www.w3.org/2000/svg">
                 <path
                     d="M127.421 32.5293L87.1493 72.1717L46.8779 32.5293L15.2852 63.6154L55.5565 103.258L15.2852 142.9L46.8779 173.999L87.1493 134.357L127.421 173.999L159 142.9L118.729 103.258L159 63.6154L127.421 32.5293Z"
