links first page

--- a/guias.html
+++ b/guias.html
@@ -171,8 +171,8 @@
 
     </main>
     <footer class="footer">
-        <svg class="footer__dots"  width="12vw" height="353" viewBox="0 0 269 353"
-            fill="none" xmlns="http://www.w3.org/2000/svg">
+        <svg class="footer__dots" width="12vw" height="353" viewBox="0 0 269 353" fill="none"
+            xmlns="http://www.w3.org/2000/svg">
             <path
                 d="M20.7172 159.738C19.115 161.473 17.0342 162.694 14.7381 163.247C12.4419 163.8 10.0334 163.659 7.8172 162.843C5.60096 162.027 3.67646 160.572 2.28707 158.662C0.897668 156.752 0.10576 154.473 0.0114759 152.113C-0.0828087 149.753 0.524764 147.418 1.75737 145.403C2.98997 143.388 4.79226 141.784 6.93633 140.794C9.08041 139.804 11.47 139.471 13.8029 139.839C16.1358 140.207 18.3074 141.258 20.0429 142.86C22.3683 145.01 23.7454 147.995 23.8719 151.159C23.9983 154.324 22.8637 157.409 20.7172 159.738Z"
                 fill="#0057FF" />
@@ -213,25 +213,25 @@
             <div class="footer__navigation">
                 <h3 class="footer__navigation-tittle">ATUALIDADE</h3>
                 <div class="footer__navigation-container">
-                    <p class="footer__navigation-item">NOTÍCIAS</p>
-                    <p class="footer__navigation-item">GUIAS</p>
-                    <p class="footer__navigation-item">JOGOS DE HOJE</p>
+                    <a href="#" class="footer__navigation-item">NOTÍCIAS</a>
+                    <a href="guias.html" class="footer__navigation-item">GUIAS</a>
+                    <a href="#" class="footer__navigation-item">JOGOS DE HOJE</a>
                 </div>
             </div>
             <div class="footer__navigation">
                 <h3 class="footer__navigation-tittle">APOSTAS</h3>
                 <div class="footer__navigation-container">
-                    <p class="footer__navigation-item">SITES DE APOSTAS</p>
-                    <p class="footer__navigation-item">CASSINOS</p>
-                    <p class="footer__navigation-item">BÔNUS DE REGISTRO</p>
+                    <a href="index.html" class="footer__navigation-item">SITES DE APOSTAS</a>
+                    <a href="casino.html" class="footer__navigation-item">CASSINOS</a>
+                    <a href="bonus.html" class="footer__navigation-item">BÔNUS DE REGISTRO</a>
                 </div>
             </div>
             <div class="footer__navigation">
                 <h3 class="footer__navigation-tittle">INFORMAÇÃO</h3>
                 <div class="footer__navigation-container">
-                    <p class="footer__navigation-item">SOBRE NÓS</p>
-                    <p class="footer__navigation-item">CONTATO</p>
-                    <p class="footer__navigation-item">COMO AVALIAMOS</p>
+                    <a href="#" class="footer__navigation-item">SOBRE NÓS</a>
+                    <a href="#" class="footer__navigation-item">CONTATO</a>
+                    <a href="#" class="footer__navigation-item">COMO AVALIAMOS</a>
                 </div>
             </div>
             <div class="footer__countries countries">
@@ -276,8 +276,8 @@
                 está apostando em operadores licenciados em sua jurisdição. Adoramos apostar, mas fazemos isso com
                 responsabilidade e pedimos que você faça o mesmo!</p>
             <p class="footer__age">18+</p>
-            <svg class="crosses__none" style="margin-top: -3vw;" width="20vw" height="174" viewBox="0 0 159 174" fill="none"
-                xmlns="http://www.w3.org/2000/svg">
+            <svg class="crosses__none" style="margin-top: -3vw;" width="20vw" height="174" viewBox="0 0 159 174"
+                fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path
                     d="M127.421 32.5293L87.1493 72.1717L46.8779 32.5293L15.2852 63.6154L55.5565 103.258L15.2852 142.9L46.8779 173.999L87.1493 134.357L127.421 173.999L159 142.9L118.729 103.258L159 63.6154L127.421 32.5293Z"
                     fill="#0057FF" />
@@ -286,9 +286,9 @@
                     fill="white" />
             </svg>
             <div class="footer__rules rules">
-                <p class="rules__item">Política de Privacidade e Cookies</p>
-                <p class="rules__item">Termos e Condições</p>
-                <p class="rules__item">Jogo Responsável</p>
+                <a href="#" class="rules__item">Política de Privacidade e Cookies</a>
+                <a href="#" class="rules__item">Termos e Condições</a>
+                <a href="#" class="rules__item">Jogo Responsável</a>
 
             </div>
             <p class="footer__law">© 2022 Apostalegal. Todos os direitos reservados.</p>
