--- a/guias.html
+++ b/guias.html
@@ -79,8 +79,8 @@
                     d="M1.56819 6.61955L105.001 79.5417C105.615 79.9745 106.348 80.2068 107.1 80.2068C107.851 80.2068 108.585 79.9745 109.199 79.5417L210.567 8.16736L311.866 79.6001C312.481 80.0351 313.216 80.2687 313.97 80.2687C314.724 80.2687 315.459 80.0351 316.074 79.6001L419.584 6.75583C420.375 6.19946 420.912 5.35204 421.077 4.39999C421.242 3.44794 421.023 2.46925 420.466 1.67922C419.909 0.889198 419.061 0.352548 418.109 0.187331C417.156 0.0221146 416.177 0.241865 415.386 0.798239L313.999 72.1726L212.67 0.730097C212.054 0.297804 211.32 0.0658657 210.567 0.0658657C209.814 0.0658657 209.079 0.297804 208.463 0.730097L107.144 72.1044L5.76628 0.661955C5.37487 0.386466 4.933 0.190724 4.46589 0.0859038C3.99879 -0.018916 3.5156 -0.0307606 3.04392 0.0510463C2.57224 0.132853 2.1213 0.30671 1.71684 0.562689C1.31239 0.818668 0.962344 1.15176 0.686693 1.54294C0.129993 2.33296 -0.0898862 3.31165 0.0754272 4.2637C0.240741 5.21575 0.777705 6.06317 1.56819 6.61955Z"
                     fill="#0057FF" />
             </svg>
-            <div class="bonuses__flex flex">
-                <div class="bonus bonuses__bonus">
+            <div class="bonuses__flex active flex">
+                <a href="#" class="bonus bonuses__bonus">
                     <p class="bonus__date">7 MAIO 2022</p>
                     <img class="bonus__image" src="img/bonus.jpg">
                     <p class="bonus__text">Bônus Sem Depósito | 7 Sites Com Bônus Grátis (2022)</p>
@@ -89,8 +89,8 @@
                         <img class="more__arrow" src="img/orangearrow.png">
                     </div>
 
-                </div>
-                <div class="bonus bonuses__bonus">
+                </a>
+                <a href="#" class="bonus bonuses__bonus">
                     <p class="bonus__date">7 MAIO 2022</p>
                     <img class="bonus__image" src="img/bonus.jpg">
                     <p class="bonus__text">Bônus Sem Depósito | 7 Sites Com Bônus Grátis (2022)</p>
@@ -99,8 +99,8 @@
                         <img class="more__arrow" src="img/orangearrow.png">
                     </div>
 
-                </div>
-                <div class="bonus bonuses__bonus">
+                </a>
+                <a href="#" class="bonus bonuses__bonus">
                     <p class="bonus__date">7 MAIO 2022</p>
                     <img class="bonus__image" src="img/bonus.jpg">
                     <p class="bonus__text">Bônus Sem Depósito | 7 Sites Com Bônus Grátis (2022)</p>
@@ -109,8 +109,8 @@
                         <img class="more__arrow" src="img/orangearrow.png">
                     </div>
 
-                </div>
-                <div class="bonus bonuses__bonus">
+                </a>
+                <a href="#" class="bonus bonuses__bonus">
                     <p class="bonus__date">7 MAIO 2022</p>
                     <img class="bonus__image" src="img/bonus.jpg">
                     <p class="bonus__text">Bônus Sem Depósito | 7 Sites Com Bônus Grátis (2022)</p>
@@ -119,8 +119,8 @@
                         <img class="more__arrow" src="img/orangearrow.png">
                     </div>
 
-                </div>
-                <div class="bonus bonuses__bonus bonus__none">
+                </a>
+                <a href="#" class="bonus bonuses__bonus bonus__none">
                     <p class="bonus__date">7 MAIO 2022</p>
                     <img class="bonus__image" src="img/bonus.jpg">
                     <p class="bonus__text">Bônus Sem Depósito | 7 Sites Com Bônus Grátis (2022)</p>
@@ -129,8 +129,8 @@
                         <img class="more__arrow" src="img/orangearrow.png">
                     </div>
 
-                </div>
-                <div class="bonus bonuses__bonus bonus__none">
+                </a>
+                <a href="#" class="bonus bonuses__bonus bonus__none">
                     <p class="bonus__date">7 MAIO 2022</p>
                     <img class="bonus__image" src="img/bonus.jpg">
                     <p class="bonus__text">Bônus Sem Depósito | 7 Sites Com Bônus Grátis (2022)</p>
@@ -139,8 +139,8 @@
                         <img class="more__arrow" src="img/orangearrow.png">
                     </div>
 
-                </div>
-                <div class="bonus bonuses__bonus bonus__none">
+                </a>
+                <a href="#" class="bonus bonuses__bonus bonus__none">
                     <p class="bonus__date">7 MAIO 2022</p>
                     <img class="bonus__image" src="img/bonus.jpg">
                     <p class="bonus__text">Bônus Sem Depósito | 7 Sites Com Bônus Grátis (2022)</p>
@@ -149,8 +149,8 @@
                         <img class="more__arrow" src="img/orangearrow.png">
                     </div>
 
-                </div>
-                <div class="bonus bonuses__bonus bonus__none">
+                </a>
+                <a href="#" class="bonus bonuses__bonus bonus__none">
                     <p class="bonus__date">7 MAIO 2022</p>
                     <img class="bonus__image" src="img/bonus.jpg">
                     <p class="bonus__text">Bônus Sem Depósito | 7 Sites Com Bônus Grátis (2022)</p>
@@ -159,16 +159,99 @@
                         <img class="more__arrow" src="img/orangearrow.png">
                     </div>
 
-                </div>
+                </a>
 
             </div>
+         
         </section>
 
         <div class="other gias__other">
-            <p class="other__text">MOSTRAR MAIS</p>
+            <p class="other__text other__text-js">MOSTRAR MAIS</p>
             <img class="other__arrow" src="img/arrowdown.png">
         </div>
+        <div class="bonuses__flex flex">
+            <a href="#" class="bonus bonuses__bonus">
+                <p class="bonus__date">7 MAIO 2022</p>
+                <img class="bonus__image" src="img/bonus.jpg">
+                <p class="bonus__text">Bônus Sem Depósito | 7 Sites Com Bônus Grátis (2022)</p>
+                <div class="bonus__more more">
+                    <p class="more__text">LER MAIS</p>
+                    <img class="more__arrow" src="img/orangearrow.png">
+                </div>
 
+            </a>
+            <a href="#" class="bonus bonuses__bonus">
+                <p class="bonus__date">7 MAIO 2022</p>
+                <img class="bonus__image" src="img/bonus.jpg">
+                <p class="bonus__text">Bônus Sem Depósito | 7 Sites Com Bônus Grátis (2022)</p>
+                <div class="bonus__more more">
+                    <p class="more__text">LER MAIS</p>
+                    <img class="more__arrow" src="img/orangearrow.png">
+                </div>
+
+            </a>
+            <a href="#" class="bonus bonuses__bonus">
+                <p class="bonus__date">7 MAIO 2022</p>
+                <img class="bonus__image" src="img/bonus.jpg">
+                <p class="bonus__text">Bônus Sem Depósito | 7 Sites Com Bônus Grátis (2022)</p>
+                <div class="bonus__more more">
+                    <p class="more__text">LER MAIS</p>
+                    <img class="more__arrow" src="img/orangearrow.png">
+                </div>
+
+            </a>
+            <a href="#" class="bonus bonuses__bonus">
+                <p class="bonus__date">7 MAIO 2022</p>
+                <img class="bonus__image" src="img/bonus.jpg">
+                <p class="bonus__text">Bônus Sem Depósito | 7 Sites Com Bônus Grátis (2022)</p>
+                <div class="bonus__more more">
+                    <p class="more__text">LER MAIS</p>
+                    <img class="more__arrow" src="img/orangearrow.png">
+                </div>
+
+            </a>
+            <a href="#" class="bonus bonuses__bonus bonus__none">
+                <p class="bonus__date">7 MAIO 2022</p>
+                <img class="bonus__image" src="img/bonus.jpg">
+                <p class="bonus__text">Bônus Sem Depósito | 7 Sites Com Bônus Grátis (2022)</p>
+                <div class="bonus__more more">
+                    <p class="more__text">LER MAIS</p>
+                    <img class="more__arrow" src="img/orangearrow.png">
+                </div>
+
+            </a>
+            <a href="#" class="bonus bonuses__bonus bonus__none">
+                <p class="bonus__date">7 MAIO 2022</p>
+                <img class="bonus__image" src="img/bonus.jpg">
+                <p class="bonus__text">Bônus Sem Depósito | 7 Sites Com Bônus Grátis (2022)</p>
+                <div class="bonus__more more">
+                    <p class="more__text">LER MAIS</p>
+                    <img class="more__arrow" src="img/orangearrow.png">
+                </div>
+
+            </a>
+            <a href="#" class="bonus bonuses__bonus bonus__none">
+                <p class="bonus__date">7 MAIO 2022</p>
+                <img class="bonus__image" src="img/bonus.jpg">
+                <p class="bonus__text">Bônus Sem Depósito | 7 Sites Com Bônus Grátis (2022)</p>
+                <div class="bonus__more more">
+                    <p class="more__text">LER MAIS</p>
+                    <img class="more__arrow" src="img/orangearrow.png">
+                </div>
+
+            </a>
+            <a href="#" class="bonus bonuses__bonus bonus__none">
+                <p class="bonus__date">7 MAIO 2022</p>
+                <img class="bonus__image" src="img/bonus.jpg">
+                <p class="bonus__text">Bônus Sem Depósito | 7 Sites Com Bônus Grátis (2022)</p>
+                <div class="bonus__more more">
+                    <p class="more__text">LER MAIS</p>
+                    <img class="more__arrow" src="img/orangearrow.png">
+                </div>
+
+            </a>
+
+        </div>
     </main>
     <footer class="footer">
         <svg class="footer__dots" width="12vw" height="353" viewBox="0 0 269 353" fill="none"
@@ -295,5 +378,5 @@
         </div>
     </footer>
 </body>
-
+<script src="filters.js"></script>
 </html>
